1.4.0 (SVN/unreleased)
======================

1.4.0-beta5
===========

 * Fixed setting of cache headers when the registry is associated with a
   RAMCache.
   [fschulze]

1.4.0-beta4
===========

 * Switched back to getToolByName.
   [wichert]

 * Added portal_kss as registry for kss files.
   [fschulze]

 * Slightly optimized the viewlet manager templates.
   [hannosch]

1.4.0-beta3
===========

 * Replace usage of getToolByNames with getUtility.
   [wichert, hannosch]

1.4.0-beta2
===========

 * Reverted fix of tests, because Zope was wrong.
   [fschulze]

1.4.0-beta1
===========

 * Fixed test failures caused by changes in Zope 2.10.
   [fschulze]

 * Ported bugfixes from 1.3 line.
   [fschulze]

1.4.0-alpha2
============

 * Started to use views and viewlet managers.
   [fschulze]

 * Removed compatibility stuff for Plone version lower than 3.0.
   [fschulze]

1.3.8
=====

 * Cook resources after GS profile import.
   [fschulze]

 * Added missing enabled property handling to updateScript.
   [fschulze]

 * Fixed typo which prevented position-after/insert-after in GS profiles to
   work.
   [fschulze]

1.3.7
=====

 * For compatibility with GenericSetup conventions, the import steps now
   support 'insert-before' and  'insert-after' as aliases for
   'position-before' and 'position-after', while 'insert-top' and
   'insert-bottom' are aliases for 'position-top' and 'position-bottom',
   respectively.
   [mj]

1.3.6
=====

 * Invalidate cache when cooking resources if the registry is assigned to a
   RAMCache or similar cache manager.

 * Fixed string replacement during packing when several resources got packed
   in different threads at once, which resulted in exchanged strings.
   [fschulze]

1.3.5
=====

 * Fixed string protection for strings which mix single and double quotes.
   [fschulze]

 * Made packer.py usable as a standalone commandline tool.
   [fschulze]

 * Fixed several issues in 'full' compression.
   [fschulze]
   